// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelText matches snapshot: enzyme.mount 1`] = `
<glamorous(span)>
  <span
    className="css-1m1nyko"
  >
    example
  </span>
</glamorous(span)>
`;

exports[`LabelText matches snapshot: enzyme.render 1`] = `
<span
  class="css-1m1nyko"
>
  example
</span>
`;

exports[`LabelText matches snapshot: enzyme.shallow 1`] = `
<span
  className="css-1m1nyko"
>
  example
</span>
`;
